--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <title>YEJIN.CHUN | SUPPORT</title>
+    <title>YEJIN.CHUN | ABOUT</title>
     <link rel="stylesheet" href="YEJIN1000ABOUT.css">
   </head>
 
