--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </ul>
 
       <ul class="menu">
-        <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
         <li><a href="#">PROJECT</a></li>
         <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
