--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -11,10 +11,10 @@
     <header>
       <div class="logo">
         <img src="PICTURE/YEJINLOGO.png">
-        <a href="YEJIN1000HOMEPAGE.html" class="logoo">Port<span>folio</span></a>
+        <a href="index.html" class="logoo">Port<span>folio</span></a>
       </div>
       <nav>
-        <a href="YEJIN1000HOMEPAGE.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="YEJIN1000ABOUT.html" class="active">ABOUT</a>
         <a href="#">PROJECT</a>
         <a href="YEJIN1000SUPPORT.html">SUPPORT</a>
@@ -24,7 +24,7 @@
       </div>
       <div class="toggle"></div>
       <ul class="menu">
-        <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
         <li><a href="#">PROJECT</a></li>
         <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
