--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -63,31 +63,29 @@
           </p>  
         </div>
 
+        
         <div class="verticle">
           <h3>2. Family</h3>
-          <p>My family and my loved ones are very important to me. I know that I wouldn't be who I am today without their love, care and support.
+          <p>The love, care, and support of my family and loved ones have been the driving force behind my success and well-being. Without their guidance and encouragement, I wouldn't be the person I am today. I am forever grateful for their unwavering support and cherish the bond we share.
           </p> 
         </div>
 
         <div class="verticle">
           <h3>3. Faith</h3>
-          <p>My faith is my foundation. 
-            It helps to keep me grounded. 
-            It also helps me to be successful and achieve my goals. 
-            We must have faith in yourself and cultivate self-love.
+          <p>Believing in oneself is paramount for achieving personal growth and success, as it keeps us anchored and nurtures self-worth. Without faith in our abilities, we limit our potential and hinder our progress. Therefore, it is crucial to cultivate a strong sense of self-belief, as it empowers us to overcome obstacles and reach our goals. Remember, you are capable of greatness, so have faith in yourself and let your light shine!<br>
           </p>
         </div>
 
         <div class="verticle">
           <h3>4. Intellectual</h3>
-          <p>I invest time in reading, learning and staying up-to-date with what is going on in the world.
+          <p>By investing my time in reading, learning, and staying up-to-date with current events, I equip myself with the knowledge and insights necessary to navigate the complexities of the world we live in. It allows me to make informed decisions, engage in meaningful conversations, and stay ahead of the curve.
           </p>  
         </div>
 
         <div class="verticle">
   
           <h3>5. Professional</h3>
-          <p>I continuously improve my skills and I am always seeking new ways to help my clients achieve their goals.
+          <p>By constantly striving to enhance my skills, I am dedicated to delivering the best possible service to my clients. My priority is to help my clients achieve their objectives, and I am committed to exploring new and innovative ways to make that happen.
           </p>
         </div> 
       </div>
