--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -2,36 +2,34 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <title>YEJIN.CHUN | ABOUT</title>
-    <link rel="stylesheet" href="YEJIN1000ABOUT.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>YEJIN CHUN | ABOUT </title>
+    <link rel="stylesheet"  href="ABOUT.css">
   </head>
 
-  <section class="banner">
+  <body onload="document.body.style.opacity='1'">
+    
+    <section class="banner">
     <header>
       <div class="logo">
         <img src="PICTURE/YEJINLOGO.png">
-        <a href="index.html" class="logoo">Port<span>folio</span></a>
+        <a href="#" class="logoo">Port<span>folio</span></a>
       </div>
       <nav>
-        <a href="index.html">HOME</a>
-        <a href="YEJIN1000ABOUT.html" class="active">ABOUT</a>
+        <a href="YEJIN1000HOMEPAGE.html">HOME</a>
+        <a href="YEJIN1000ABOUT.html">ABOUT</a>
         <a href="#">PROJECT</a>
-        <a href="YEJIN1000SUPPORT.html">SUPPORT</a>
+        <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
       </nav>
-      <div id="toggle2">
-        <i class="indicator"></i>
-      </div>
       <div class="toggle"></div>
       <ul class="menu">
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
         <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
         <li><a href="#">PROJECT</a></li>
         <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
       </ul>
-
     </header>
-  <body onload="document.body.style.opacity='1'">
+    </section>
     <section class="first_section">
       <h2> I am 
         <span style="--i:0;" data-text="Yejin&nbsp;Chun.">Yejin&nbsp;Chun.</span>
@@ -63,7 +61,6 @@
           </p>  
         </div>
 
-        
         <div class="verticle">
           <h3>2. Family</h3>
           <p>The love, care, and support of my family and loved ones have been the driving force behind my success and well-being. Without their guidance and encouragement, I wouldn't be the person I am today. I am forever grateful for their unwavering support and cherish the bond we share.
@@ -90,74 +87,52 @@
         </div> 
       </div>
 
-    </section>
-    <section class="third_section">
-      <div class="bgcolor">      
-        <h3> peace&nbsp;of&nbsp;mind</h3>
-        <div class="nature101">
-        <img class="nature" src="PICTURE/nature.gif">
-        <img class="nature2" src="PICTURE/nature_nondark.gif">
-        </div>
-        <p>A person who loves nature, music, exercise, sports, and general well-being.<br>
-          I do my best to live the most balanced life possible. 
-          Life is a gift that we must not take for granted. 
-          Nothing is more important to me than the peace of mind of my loved ones and the being in the best mental and physical shape possible.
-        </p>  
-      </div>
-    </section> 
-
-    <section class="last_section">
-      <h2> Thank you for visit,<br>
-        and i hope you are doing well.
-      </h2>
-      <div class="end">
-        <P>Stay ahead of the new information<br>and never miss out on my latest updates<br>by subscribing to our newsletter today!</P>
-        <img class="arrow" src="PICTURE/Vector 8.png">
-      </div>
-      <div class="check">
-        <div class="container">
-          <div class="container-f">
-            <div class="button">subscribe</div>
-            </div>
+      <section class="third_section">
+        <div class="bgcolor">      
+          <h3> peace&nbsp;of&nbsp;mind</h3>
+          <div class="nature101">
+          <img class="nature" src="PICTURE/nature.gif">
+          <img class="nature2" src="PICTURE/nature_nondark.gif">
           </div>
-      </div>
+          <p>A person who loves nature, music, exercise, sports, and general well-being.<br>
+            I do my best to live the most balanced life possible. 
+            Life is a gift that we must not take for granted. 
+            Nothing is more important to me than the peace of mind of my loved ones and the being in the best mental and physical shape possible.
+          </p>  
+        </div>
+      </section> 
+
+
+      <footer>
+        <ul class="sci">
+          <li><a href="https://www.instagram.com/yejin_1000/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+          <li><a href="https://www.linkedin.com/in/yejin-chun/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+          <li><a href="mailto:yejin.chunNO@SPAMuon.edu.au?" target="_blank"><ion-icon name="mail-unread-outline"></ion-icon></a></li>
+          <div id="toggle2">
+            <i class="indicator"></i>
+          </div>
+        </ul>
+      </footer>
+
     </section>
 
-    <script>
-    let check = document.querySelector('.check');
-      let moveX, moveY; 
-
-      check.addEventListener('mousemove', (e) => {
-        let x = e.offsetX;
-        let y = e.offsetY;
-        let CheckWidth = check.clientWidth;
-        let CheckHeight = check.clientHeight;
-        moveX = (x -+ CheckWidth);
-        moveY = (y -+ CheckHeight);
-        check.style.transform = `translateX(${moveX}px) translateY(${moveY}px)`;
-      });
-
-      check.addEventListener('mouseout', (e) => {
-        check.style.transform = `translateX(0px) translateY(0px)`;
-      });
-    </script>
-
 
     <script>
-      let banner = document.querySelector('.banner');
-      let menutoggle = document.querySelector('.toggle');
-      menutoggle.onclick = function () {
-        menutoggle.classList.toggle('active');
-        banner.classList.toggle('active');
-      }
+    let banner = document.querySelector('.banner');
+    let menutoggle = document.querySelector('.toggle');
+    menutoggle.onclick = function () {
+      menutoggle.classList.toggle('active');
+      banner.classList.toggle('active');
+    }
 
-      const toggle2 = document.getElementById('toggle2');
-      toggle2.onclick = function () {
-        toggle2.classList.toggle('active');
-        document.body.classList.toggle('active');
-      }
+    const toggle2 = document.getElementById('toggle2');
+    toggle2.onclick = function () {
+      toggle2.classList.toggle('active');
+      document.body.classList.toggle('active');
+    }
     </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
-  </section>
-
 </html>
