--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>YEJIN CHUN | ABOUT </title>
-    <link rel="stylesheet"  href="ABOUT.css">
+    <link rel="stylesheet"  href="YEJIN1000ABOUT.css">
   </head>
 
   <body onload="document.body.style.opacity='1'">
@@ -13,23 +13,22 @@
     <header>
       <div class="logo">
         <img src="PICTURE/YEJINLOGO.png">
-        <a href="#" class="logoo">Port<span>folio</span></a>
+        <a href="https://yejin1000.github.io/yejin1000/" class="logoo">Port<span>folio</span></a>
       </div>
       <nav>
-        <a href="YEJIN1000HOMEPAGE.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="YEJIN1000ABOUT.html">ABOUT</a>
         <a href="#">PROJECT</a>
         <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
       </nav>
       <div class="toggle"></div>
       <ul class="menu">
-        <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
+        <li><a href="https://yejin1000.github.io/yejin1000/">HOME</a></li>
         <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
         <li><a href="#">PROJECT</a></li>
         <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
       </ul>
     </header>
-    </section>
     <section class="first_section">
       <h2> I am 
         <span style="--i:0;" data-text="Yejin&nbsp;Chun.">Yejin&nbsp;Chun.</span>
@@ -115,6 +114,7 @@
       </footer>
 
     </section>
+  </section>
 
 
     <script>
