--- a/YEJIN1000SUPPORT.html
+++ b/YEJIN1000SUPPORT.html
@@ -51,25 +51,23 @@
       <header>
         <div class="logo">
           <img src="PICTURE/YEJINLOGO.png">
-            <a href="index.html" class="logoo">Port<span>folio</span></a>
-          </div>
-          <nav>
-            <a href="index.html">HOME</a>
-            <a href="YEJIN1000ABOUT.html">ABOUT</a>
-            <a href="#">PROJECT</a>
-            <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
-          </nav>
-          <div id="toggle2">
-            <i class="indicator"></i>
-          </div>
-            <div class="toggle"></div>
-            <ul class="menu">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
-              <li><a href="#">PROJECT</a></li>
-              <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
-            </ul>
-        </header>
+          <a href="#" class="logoo">Port<span>folio</span></a>
+        </div>
+        <nav>
+          <a href="YEJIN1000HOMEPAGE.html">HOME</a>
+          <a href="YEJIN1000ABOUT.html">ABOUT</a>
+          <a href="#">PROJECT</a>
+          <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
+        </nav>
+        <div class="toggle"></div>
+        <ul class="menu">
+          <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
+          <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
+          <li><a href="#">PROJECT</a></li>
+          <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
+        </ul>
+      </header>
+
         <section class="ly">
           <div class="content">
             <div class="container">
@@ -195,7 +193,19 @@
               </div>
              </div>
            </div>
+
+           <footer>
+            <ul class="sci">
+              <li><a href="https://www.instagram.com/yejin_1000/"  target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+              <li><a href="https://www.linkedin.com/in/yejin-chun/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+              <li><a href="mailto:yejin.chunNO@SPAMuon.edu.au?" target="_blank"><ion-icon name="mail-unread-outline"></ion-icon></a></li>
+              <div id="toggle2">
+                <i class="indicator"></i>
+              </div>
+            </ul>
+          </footer>
         </section>
+
         
           <script>
             let banner = document.querySelector('.banner');
@@ -218,5 +228,7 @@
       
           </div>
     </section>
+
+
   </body>
 </html>
