--- a/YEJIN1000SUPPORT.html
+++ b/YEJIN1000SUPPORT.html
@@ -54,14 +54,14 @@
           <a href="#" class="logoo">Port<span>folio</span></a>
         </div>
         <nav>
-          <a href="YEJIN1000HOMEPAGE.html">HOME</a>
+          <a href="https://yejin1000.github.io/yejin1000/">HOME</a>
           <a href="YEJIN1000ABOUT.html">ABOUT</a>
           <a href="#">PROJECT</a>
           <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
         </nav>
         <div class="toggle"></div>
         <ul class="menu">
-          <li><a href="YEJIN1000HOMEPAGE.html">HOME</a></li>
+          <li><a href="https://yejin1000.github.io/yejin1000/">HOME</a></li>
           <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
           <li><a href="#">PROJECT</a></li>
           <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
