--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -10,25 +10,25 @@
   <body onload="document.body.style.opacity='1'">
     
     <section class="banner">
-    <header>
-      <div class="logo">
-        <img src="PICTURE/YEJINLOGO.png">
-        <a href="https://yejin1000.github.io/yejin1000/" class="logoo">Port<span>folio</span></a>
-      </div>
-      <nav>
-        <a href="index.html">HOME</a>
-        <a href="YEJIN1000ABOUT.html">ABOUT</a>
-        <a href="#">PROJECT</a>
-        <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
-      </nav>
-      <div class="toggle"></div>
-      <ul class="menu">
-        <li><a href="https://yejin1000.github.io/yejin1000/">HOME</a></li>
-        <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
-        <li><a href="#">PROJECT</a></li>
-        <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
-      </ul>
-    </header>
+      <header>
+        <div class="logo">
+          <img src="PICTURE/YEJINLOGO.png">
+          <a href="#" class="logoo">Port<span>folio</span></a>
+        </div>
+        <nav>
+          <a href="https://yejin1000.github.io/yejin1000/">HOME</a>
+          <a href="YEJIN1000ABOUT.html">ABOUT</a>
+          <a href="#">PROJECT</a>
+          <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
+        </nav>
+        <div class="toggle"></div>
+        <ul class="menu">
+          <li><a href="https://yejin1000.github.io/yejin1000/">HOME</a></li>
+          <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
+          <li><a href="#">PROJECT</a></li>
+          <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
+        </ul>
+      </header>
     <section class="first_section">
       <h2> I am 
         <span style="--i:0;" data-text="Yejin&nbsp;Chun.">Yejin&nbsp;Chun.</span>
@@ -85,22 +85,23 @@
           </p>
         </div> 
       </div>
+    </section>
 
-      <section class="third_section">
-        <div class="bgcolor">      
-          <h3> peace&nbsp;of&nbsp;mind</h3>
-          <div class="nature101">
-          <img class="nature" src="PICTURE/nature.gif">
-          <img class="nature2" src="PICTURE/nature_nondark.gif">
-          </div>
-          <p>A person who loves nature, music, exercise, sports, and general well-being.<br>
-            I do my best to live the most balanced life possible. 
-            Life is a gift that we must not take for granted. 
-            Nothing is more important to me than the peace of mind of my loved ones and the being in the best mental and physical shape possible.
-          </p>  
+    <section class="third_section">
+      <div class="bgcolor">      
+        <h3> peace&nbsp;of&nbsp;mind</h3>
+        <div class="nature101">
+        <img class="nature" src="PICTURE/nature.gif">
+        <img class="nature2" src="PICTURE/nature_nondark.gif">
         </div>
-      </section> 
-
+        <p>A person who loves nature, music, exercise, sports, and general well-being.<br>
+          I do my best to live the most balanced life possible. 
+          Life is a gift that we must not take for granted. 
+          Nothing is more important to me than the peace of mind of my loved ones and the being in the best mental and physical shape possible.
+        </p>  
+      </div>
+    </section> 
+   </section>
 
       <footer>
         <ul class="sci">
@@ -113,8 +114,6 @@
         </ul>
       </footer>
 
-    </section>
-  </section>
 
 
     <script>
