--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -13,7 +13,7 @@
       <header>
         <div class="logo">
           <img src="PICTURE/YEJINLOGO.png">
-          <a href="#" class="logoo">Port<span>folio</span></a>
+          <a href="https://yejin1000.github.io/yejin1000/" class="logoo">Port<span>folio</span></a>
         </div>
         <nav>
           <a href="https://yejin1000.github.io/yejin1000/">HOME</a>
