--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -17,9 +17,9 @@
         </div>
         <nav>
           <a href="https://yejin1000.github.io/yejin1000/">HOME</a>
-          <a href="YEJIN1000ABOUT.html">ABOUT</a>
+          <a href="YEJIN1000ABOUT.html" class="active">ABOUT</a>
           <a href="#">PROJECT</a>
-          <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
+          <a href="YEJIN1000SUPPORT.html">SUPPORT</a>
         </nav>
         <div class="toggle"></div>
         <ul class="menu">
