--- a/YEJINCV.html
+++ b/YEJINCV.html
@@ -39,7 +39,7 @@
             <p class="description">I am passionate about actively learning new knowledge and daring to challenge new experiences. 
                                     Moreover, I have the confidence and sense of responsibility to perfectly handle all tasks.
                                    I am ready to embrace the challenge and hope to build the future with the world.<br></p>
-            <a class="DlownloadBtn" href="#" download="Resume.pdf"> Dlownload Resume</a>
+            <a class="DlownloadBtn" href="https://yejin1000.github.io/yejin1000/YEJINCV.html" download="Resume.pdf"> Dlownload Resume</a>
           </div>
         </div>
       </div>
