--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -99,6 +99,27 @@
         </p>  
       </div>
     </section> 
+          <section class="third_section_edit">
+      <h3>As a person who deeply treasures peace and nature, I make a conscious effort to actively participate in activities that benefit society.
+      By doing so, I believe that I'm able to make a meaningful contribution towards creating a better world for all of us to enjoy.
+      </h3>
+      <div class="listup">
+        <div class="scroll imgbx" style="--t:24s">
+          <div>
+            <img src="PICTURE/YEJIN.CHUN>1.png">
+            <img src="PICTURE/YEJIN.CHUN>2.png">
+            <img src="PICTURE/YEJIN.CHUN>3.png">
+          </div>
+          <div>
+            <img src="PICTURE/YEJIN.CHUN>1.png">
+            <img src="PICTURE/YEJIN.CHUN>2.png">
+            <img src="PICTURE/YEJIN.CHUN>3.png">
+          </div>
+        </div>
+      </div>
+      <h4>I can't wait for upcoming events! They bring excitement and new experiences</h4>
+    </section>
+      
    <section class="last_section">
     <div class="cookierun">
       <img class="cookie" src="PICTURE/cookie.gif">
