--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
         <li><a href="#">PROJECT</a></li>
         <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
+        <li><a href="GUESTBOOK.html">GUEST BOOK</a></li>
       </ul>
 
     </section>
