--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -20,6 +20,7 @@
           <a href="YEJIN1000ABOUT.html" class="active">ABOUT</a>
           <a href="#">PROJECT</a>
           <a href="YEJIN1000SUPPORT.html">SUPPORT</a>
+          <a href="GUESTBOOK.html" class="active">GUEST BOOK</a>
         </nav>
         <div class="toggle"></div>
         <ul class="menu">
@@ -27,6 +28,7 @@
           <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
           <li><a href="#">PROJECT</a></li>
           <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
+          <li><a href="GUESTBOOK.html">GUEST BOOK</a></li>
         </ul>
       </header>
     <section class="first_section">
