--- a/YEJIN1000SUPPORT.html
+++ b/YEJIN1000SUPPORT.html
@@ -58,6 +58,7 @@
           <a href="YEJIN1000ABOUT.html">ABOUT</a>
           <a href="#">PROJECT</a>
           <a href="YEJIN1000SUPPORT.html" class="active">SUPPORT</a>
+          <a href="GUESTBOOK.html">GUEST BOOK</a>
         </nav>
         <div class="toggle"></div>
         <ul class="menu">
@@ -65,6 +66,7 @@
           <li><a href="YEJIN1000ABOUT.html">ABOUT</a></li>
           <li><a href="#">PROJECT</a></li>
           <li><a href="YEJIN1000SUPPORT.html">SUPPORT</a></li>
+          <li><a href="GUESTBOOK.html">GUEST BOOK</a></li>
         </ul>
       </header>
 
