--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -20,7 +20,7 @@
           <a href="YEJIN1000ABOUT.html" class="active">ABOUT</a>
           <a href="#">PROJECT</a>
           <a href="YEJIN1000SUPPORT.html">SUPPORT</a>
-          <a href="GUESTBOOK.html" class="active">GUEST BOOK</a>
+          <a href="GUESTBOOK.html">GUEST BOOK</a>
         </nav>
         <div class="toggle"></div>
         <ul class="menu">
