--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>YEJIN CHUN | Portfolio </title>
     <meta name = “description” content = “YEJIN.CHUN Personal Webpage| Welcome to My Playground. I hope you like it🚀”>
-    <meta name=”keywords” content = “Portfolio, Webdesign″>
+    <meta name=”keywords” content = “Portfolio, Webdesign, Yejin_1000″>
     <link rel="stylesheet"  href="YEJIN1000HOMEPAGE.css">
   </head>
 
