--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -32,6 +32,11 @@
         </ul>
       </header>
     <section class="first_section">
+
+      <div class="bannerme101">
+        <img class="bannerme1" src="PICTURE/bannerimggg.png">
+        <img class="bannerme2" src="PICTURE/bannerimggg-daymode.png">  
+      </div>
       <h2> I am 
         <span style="--i:0;" data-text="Yejin&nbsp;Chun.">Yejin&nbsp;Chun.</span>
         <span style="--i:1;" data-text="Team&nbsp;INFJ.">Team&nbsp;INFJ.</span>
@@ -39,7 +44,7 @@
         <span style="--i:3;" data-text="Idealist.">Idealist.</span>
         <span style="--i:4;" data-text="environmentalist.">environmentalist.</span>
       </h2>
-      <p><span>Welcome to visit. Now, it's time to get to know me better.</span><br><br>
+      <p><span>Welcome to visit. Now, it's time to get to know me better.</span><br>
         I am a proud Korean who is ready to embrace the challenge and hope to build the future with the world. <br>
         On this page, I would like to share more about myself, beyond just my work or projects.
       </p>
@@ -52,6 +57,8 @@
         <img class="halfcircle1" src="PICTURE/dark-mode.jpg">
         <img class="halfcircle2" src="PICTURE/non-dark-mode.jpg">  
       </div>
+
+
       <div class="herizontal">
         <div class="verticle">
           <h3>1. Health</h3>
@@ -101,7 +108,7 @@
         </p>  
       </div>
     </section> 
-          <section class="third_section_edit">
+    <section class="third_section_edit">
       <h3>As a person who deeply treasures peace and nature, I make a conscious effort to actively participate in activities that benefit society.
       By doing so, I believe that I'm able to make a meaningful contribution towards creating a better world for all of us to enjoy.
       </h3>
@@ -121,7 +128,7 @@
       </div>
       <h4>I can't wait for upcoming events! They bring excitement and new experiences</h4>
     </section>
-      
+
    <section class="last_section">
     <div class="cookierun">
       <img class="cookie" src="PICTURE/cookie.gif">
@@ -133,9 +140,7 @@
         So I want to state it, Cookie Run is the best game in the world.</p>
     </div>
   </section> 
-      
  </section>
-   </section>
 
       <footer>
         <ul class="sci">
