--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -94,6 +94,56 @@
       </div>
     </section>
 
+    <section class="insight-info">
+      <div class="insight-info-de">With a keen eye for analyzing the world around me and a relentless pursuit of efficiency, 
+        <br>I strive to understand and optimize everything I encounter. Guided by this mindset, 
+        <br>I have published a comprehensive article on game optimization and efficient distribution, 
+        <br>exploring strategies to maximize performance and streamline deployment.
+      </div>
+    </section>
+    <section class="insight">
+      <div class="insight-cul">
+        <div class="article">
+          <div class="articlesss">
+            <h3>How to identify missed opportunities in your creative analysis<br> with visualizations</h3>
+            <p>시각화를 통해 광고 소재 분석에서 놓친 기회를 식별하는 방법</p>
+            <div class="artbutton"><a href="https://www.is.com/ko/community/blog/how-to-identify-missed-opportunities-in-your-creative-analysis-with-visualizations/">💡 Learn More</a></div> 
+          </div>
+  
+          <div class="articlesss">
+            <h3>4 analytics reports to optimize your monetization strategy</h3>
+            <p>수익화 전략을 최적화하기 위한 4가지 분석 리포트</p>
+            <div class="artbutton"><a href="https://www.is.com/ko/community/blog/how-to-analyze-and-optimize-your-monetization-strategy/">📋 Learn More</a></div> 
+          </div>
+  
+          <div class="articlesss">
+            <h3>4 ways to scale and optimize your app's UA strategy,<br> backed by data</h3>
+            <p>데이터 기반으로 앱의 UA 전략을 확장 및 최적화할 수 있는 4가지 방법</p>
+            <div class="artbutton"><a href="https://www.is.com/ko/community/blog/4-ways-to-scale-and-optimize-your-apps-ua-strategy-backed-by-data/">💡 Learn More</a></div> 
+          </div>
+  
+          <div class="articlesss">
+            <h3>App Analytics: 3 ways to optimize performance <br>by combining player and growth data</h3>
+            <p>앱 애널리틱스: 플레이어 데이터 및 성장 데이터의 결합을 통한 3가지 성과 최적화 방법</p>  
+            <div class="artbutton"><a href="https://www.is.com/ko/community/blog/3-ways-you-can-optimize-your-app-business-with-app-analytics/">📋 Learn More</a></div> 
+          </div>
+  
+          <div class="articlesss">
+    
+            <h3>How to monetize the 97% of non-payers in your midcore <br>or hardcore game</h3>
+            <p>미드코어 및 하드코어 게임의 97%를 차지하는 무과금 유저로부터<br> 수익을 창출하는 방법은?</p>
+            <div class="artbutton"><a href="https://www.is.com/ko/community/blog/how-to-monetize-non-payers-in-your-game/">💡 Learn More</a></div> 
+          </div> 
+        </div>
+      </div>
+      <div class="boxxgirll">
+        <img class="boxgirl" src="PICTURE/boxgirl.png">
+        <img class="boxgirl2" src="PICTURE/boxgirl2.png">
+      </div>
+    </section>
+
+    
+
     <section class="third_section">
       <div class="bgcolor">      
         <h3> peace&nbsp;of&nbsp;mind</h3>
