--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -93,7 +93,6 @@
         </div> 
       </div>
     </section>
-
     <section class="insight-info">
       <div class="insight-info-de">With a keen eye for analyzing the world around me and a relentless pursuit of efficiency, 
         <br>I strive to understand and optimize everything I encounter. Guided by this mindset, 
@@ -142,8 +141,6 @@
       </div>
     </section>
 
-    
-
     <section class="third_section">
       <div class="bgcolor">      
         <h3> peace&nbsp;of&nbsp;mind</h3>
@@ -158,25 +155,59 @@
         </p>  
       </div>
     </section> 
+
+    <section class="insight-shape">
+      <div class="droplet101">
+        <iframe src="Liquid Blast Effects dark.html" name="dropdrop"></iframe>
+        <iframe src="Liquid Blast Effects day.html" name="dropdrop"></iframe>
+      </div>
+    </section>
+
+    <section class="insight-info">
+      <div class="insight-info-de">As someone who treasures peace and nature, <br>
+        I aspire to be like a water droplet—sharp and focused in expertise,<br> yet fluid and adaptable across diverse fields.<br> 
+        With this mindset,I actively engage in meaningful efforts to create ripples of positive change, <br>
+        believing that even the smallest actions can contribute to a better world for all.
+      </div>
+    </section>
+
     <section class="third_section_edit">
-      <h3>As a person who deeply treasures peace and nature, I make a conscious effort to actively participate in activities that benefit society.
-      By doing so, I believe that I'm able to make a meaningful contribution towards creating a better world for all of us to enjoy.
-      </h3>
-      <div class="listup">
-        <div class="scroll imgbx" style="--t:24s">
-          <div>
-            <img src="PICTURE/YEJIN.CHUN>1.png">
-            <img src="PICTURE/YEJIN.CHUN>2.png">
-            <img src="PICTURE/YEJIN.CHUN>3.png">
+      <div class="container">
+        <div class="card">
+          <div class="box">
+            <div class="icon"><ion-icon name="earth-outline"></ion-icon></div>
+            <div class="content">
+              <h1>diplomatic initiatives</h1>
+              <p>I have actively participated in international organizations such as Model UN and UNESCO, engaging in global discussions and cultural preservation initiatives.
+              </p>
+              <a href="#">Know More</a>
+            </div>
           </div>
-          <div>
-            <img src="PICTURE/YEJIN.CHUN>1.png">
-            <img src="PICTURE/YEJIN.CHUN>2.png">
-            <img src="PICTURE/YEJIN.CHUN>3.png">
+        </div>
+        <div class="card">
+          <div class="box">
+            <div class="icon"><ion-icon name="code-slash-outline"></ion-icon></div>
+            <div class="content">
+              <h1>Certified Tech Enthusiast</h1>
+              <p>I have a strong passion for computing and hold various certifications that demonstrate my expertise across different areas of technology.
+              </p>
+              <a href="#">Know More</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <div class="icon"><ion-icon name="accessibility-outline"></ion-icon></div>
+            <div class="content">
+              <h1>Cyber Diplomacy Forum</h1>
+              <p>I have participated in the International Cyber Peace Initiative, contributing to discussions on global cybersecurity and digital peace.
+              </p>
+              <a href="#">Know More</a>
+            </div>
           </div>
         </div>
       </div>
-      <h4>I can't wait for upcoming events! They bring excitement and new experiences</h4>
+  
     </section>
 
    <section class="last_section">
