--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -158,8 +158,8 @@
 
     <section class="insight-shape">
       <div class="droplet101">
-        <iframe src="Liquid Blast Effects dark.html" name="dropdrop"></iframe>
-        <iframe src="Liquid Blast Effects day.html" name="dropdrop"></iframe>
+        <iframe src="https://yejin1000.github.io/yejin1000/Effect/Liquid%20Blast%20Effects%20dark.html" name="dropdrop"></iframe>
+        <iframe src="https://yejin1000.github.io/yejin1000/Effect/Liquid%20Blast%20Effects%20day.html" name="dropdrop"></iframe>
       </div>
     </section>
 
