--- a/YEJIN1000ABOUT.html
+++ b/YEJIN1000ABOUT.html
@@ -211,14 +211,13 @@
     </section>
 
    <section class="last_section">
-    <div class="cookierun">
-      <img class="cookie" src="PICTURE/cookie.gif">
-      <img class="cookie2" src="PICTURE/Cookie_B.gif">
-    </div>
-    <div class="bgcolodr">   
-      <p>I have been playing the same game since I was 13 years old (since 2014).
-        <br>Some people might think I'm a bit unusual or weirdo, but to put it positively, I prefer to think of myself as someone persistent and assiduous. 
-        So I want to state it, Cookie Run is the best game in the world.</p>
+    <div class="pulse">
+      <span style="--i:1;"></span>
+      <span style="--i:2;"></span>
+      <span style="--i:3;"></span>
+      <span style="--i:4;"></span>
+      <span style="--i:5;"></span>
+      <span style="--i:6;"></span>
     </div>
   </section> 
  </section>
